[package]
name = "rust-scriptor"
version = "0.1.0"
edition = "2021"
description = "EB scriptor XML generator"
authors = ["Melodypapa <melodypapa@outlook.com>"]
homepage = "https://github.com/melodypapa/rust-scriptor"
readme = "README.md"
license = "MIT"
keywords = ["EB", "scriptor", "Tresos Studio"]
#default-run = "y2s"
default-run = "rust-scriptor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2"
env_logger = "0.11.1"
log = "0.4.20"
xml = "0.8.10"

[dev-dependencies]
assert_cmd = "*"